--- a/client/src/app/notifications/notifications.component.html
+++ b/client/src/app/notifications/notifications.component.html
@@ -1,22 +1,23 @@
-<div class="row  my-5 mx-1 mx-auto">
-        <div class="frame col-12 col-md-10 py-3 mx-auto">
-    <div class="row">
-        <ul class="list-group col-10 mx-auto my-1">
-            <app-notifications-list *ngFor="let postNotif of postNotifs; let j = index"
-                [title]="postNotif.title"
-                [moderated]="postNotif.moderated"
-                [id]="postNotif.id"
-                >
-
-            </app-notifications-list>
-            <app-notifications-list *ngFor="let commentNotif of commentNotifs; let k = index"
-                [postId]="commentNotif.postId"
-                [titlePost]="commentNotif.title"
-                [commentId]="commentNotif.id"
-                >
-            </app-notifications-list>
-        </ul>
+<div class="row my-3 mx-auto" id="#page-top-notifications">
+    <mat-spinner style="margin:0 auto;" *ngIf="loading"></mat-spinner>
+    <p class="text-danger col-6 mx-auto text-center" *ngIf="errorMsg">{{ errorMsg }}</p>
+    <div class="frame col-12 col-md-10 py-3 mx-auto" *ngIf="!loading">
+        <div class="row">
+            <ul class="list-group col-10 mx-auto my-1">
+                <app-notifications-list *ngFor="let postNotif of postNotifs; let j = index"
+                    [title]="postNotif.title"
+                    [moderated]="postNotif.moderated"
+                    [id]="postNotif.id"
+                    >
+                </app-notifications-list>
+                <app-notifications-list *ngFor="let commentNotif of commentNotifs; let k = index"
+                    [postId]="commentNotif.postId"
+                    [titlePost]="commentNotif.title"
+                    [commentId]="commentNotif.id"
+                    >
+                </app-notifications-list>
+            </ul>
+        </div>
+        <p *ngIf="!gotPostNotifs && !gotCommentNotifs" class="text-center">Vous n'avez pas de notifications</p>
     </div>
-    <p *ngIf="!gotPostNotifs && !gotCommentNotifs" class="text-center">Vous n'avez pas de notifications</p>
-</div>
 </div>
