--- a/client/src/app/publication-list/publication-list-item/publication-list-item.component.scss
+++ b/client/src/app/publication-list/publication-list-item/publication-list-item.component.scss
@@ -16,6 +16,20 @@
             color: whitesmoke;
             white-space: pre-line; 
         }
+
+        .numbers {
+            a {
+                color: whitesmoke;
+            }
+            a:hover {
+                color: $prof-link;
+                font-weight: 600;
+            }
+            a:focus {
+                border: solid 1px $btn-main;
+                padding: 0px 3px;
+            }
+        }
     }        
 
     .see-it {
@@ -25,7 +39,7 @@
         a {
         background-color: $btn-main;
         color: white;
-        padding: 10px 10px;
+        padding: 10px;
         border-radius: 50%;
         border: solid 1px rgb(48, 48, 48);
         }
@@ -34,6 +48,12 @@
         }
         a:focus {    
             background-color: $prof-link;
+            border: solid 3px brown;
+            padding: 9px;
+        }
+        img {
+            width: 30px;
+            height: 30px;
         }
     }
 
@@ -83,18 +103,17 @@ li {
         margin-right: 10px;
     }
     p {
-        padding-top: 15px; 
+        padding-top: 15px;
+        a {
+            color: $prof-link;
+            font-weight: 600;
+        }
         a:focus {
-            border: solid 1px $prof-link;
-            padding: 2px;
+            border: solid 1px $btn-main;
+            padding: 0px 5px;
         }
         a:hover {
             color: whitesmoke;
-        }
-    }    
-}
-
-.see-it img {
-    width: 30px;
-    height: 30px;
+        }       
+    }
 }
