--- a/client/src/app/publication-list/publication-list.component.html
+++ b/client/src/app/publication-list/publication-list.component.html
@@ -1,15 +1,10 @@
-<div class="row">
+<div class="row mt-3" id="page-top-list">
   <div class="col-xs-10 col-lg-8 mx-auto">
     <mat-spinner style="margin:0 auto" *ngIf="loading"></mat-spinner>
-    <div class="top row mx-1 mx-sm-0">
+    <div class="top row col-md-10 col-lg-12 mx-auto px-0">
         <h2 class="text-center align-self-center col-8 mb-2 mx-auto d-none d-sm-block">Les dernières publications</h2>
-        <button class="col-12 col-sm-3 ml-1 text-center align-self-center mx-auto" *ngIf="!posting" (click)="onWantPost()">Publier</button>
+        <button class="col-6 col-sm-3 ml-sm-1 text-center align-self-center mx-auto" *ngIf="!posting" (click)="onWantPost()">Publier</button>
     </div>
-
-  <!--  <div class="row">
-      <p class="text-center align-self-center col-7 mb-2 mx-auto">Liste des utilisateurs</p>
-      <button mat-raised-button class="col-4 mb-2 ml-1 text-center mx-auto" color="primary" (click)="onBackFromList()">Retour au profil</button>
-  </div>-->
     <div class="row">
       <p class="text-danger col-6 mx-auto text-center" *ngIf="errorMsg">{{ errorMsg }}</p>
     </div>
@@ -36,7 +31,7 @@
         <button mat-raised-button class="mb-3" (click)="onCancel()">Annuler</button> 
     </form>
 
-    <ul class="list-group">
+    <ul class="list-group col-md-10 mx-auto col-lg-12 px-0">
         <app-publication-list-item  *ngFor="let publication of publications; let i = index"
               [publicationTitle]="publication.title"
               [publicationContent]="publication.content"
@@ -47,7 +42,8 @@
               [publicationImageUser]="publication.imageUrl"
               [publicationModerated]="publication.moderated"
               [index]="i" 
-              [id]="publication.id">
+              [id]="publication.id"
+              [publicationLikeUsernames]="publication.likeUsernames">
         </app-publication-list-item>
     </ul>
   </div>
