--- a/client/src/app/single-publication/comment-list/comment-list-item/comment-list-item.component.scss
+++ b/client/src/app/single-publication/comment-list/comment-list-item/comment-list-item.component.scss
@@ -5,7 +5,7 @@ li {
     list-style-type: none;
     padding: 10px;
     margin: 10px 0px 0px 0px;
-    
+    border: none;
 }
 
 .infos {
@@ -17,19 +17,23 @@ li {
     span {
         font-weight: 500;
     }
-    a:focus {
-        border: solid 1px $btn-main;
-        padding: 2px;
+    
+    a {
+    color: $prof-link;
     }
-    a{
-        color: $prof-link;
-    }
+    
     a:hover {
         color: whitesmoke;
     }
+
     a:focus {
-        color: $btn-main;
+    border: solid 1px $btn-main;
     }
+
+}
+
+.comment {
+    padding: 0px 10px;
 }
 
 .comment-all {
@@ -81,20 +85,6 @@ li {
         border: solid 1px $post-bg;
         margin-right: 10px;
     }
-    p {
-       padding-top: 15px; 
-       color: whitesmoke;
-    }
-
-    a {
-        color: $prof-link;
-    }
-    a:hover {
-        color: whitesmoke;
-    }
-    a:focus {
-        color: $btn-main;
-    }
 }
 
 .form-control {
@@ -107,7 +97,15 @@ label {
 
 button {
     background-color: $btn-main;
-    color: whitesmoke;
+    color: whitesmoke;    
+}
+
+button:hover {
+    background-color: $post-bg;
+}
+
+button:focus {
+    outline-offset: 0px;
 }
 
 button:disabled {
