--- a/client/src/app/single-publication/single-publication.component.html
+++ b/client/src/app/single-publication/single-publication.component.html
@@ -2,26 +2,31 @@
   <div class="col-xs-10 col-md-9 col-lg-8 mx-auto">
 
     <mat-spinner style="margin:0 auto" class="mx-auto" *ngIf="loading"></mat-spinner>
-    <p class="text-danger" *ngIf="errorMsg">{{ errorMsg }}</p>
-    <div [ngClass]="{'single-publication': true,
-    'single-publication-like': likes === true
+    <p class="text-danger" *ngIf="errorMsg">{{errorMsg }}</p>
+    <div [ngClass]="{'single-publication': true
                     }" *ngIf="!loading">
-        <h2 [ngStyle]="{color: 'primary'}">{{title}}</h2>
+        <h2 [ngStyle]="{color: 'primary'}">{{publication?.title}}</h2>
         <div class="infos-post">
-          <div class="profilePic pt-0" >
-            <img [src]="publication?.imageUrl" alt="profile picture">      
-            <p>Par <span>{{publication?.userName}}</span></p>
+          <div class="row no-gutters mx-2 pt-0" >
+            <div class="profilePic col-8 pt-1 pb-3">
+              <img [src]="publication?.imageUrl" alt="profile picture">      
+              <p>Par <span>{{publication?.userName}}</span></p>
+            </div>
+            <div class="like col-4 pb-3">
+              <button (click)="onLike()" *ngIf="!liked"><img src="./assets/images/like-icon.png" alt="like icon"></button>
+              <button (click)="onLike()" *ngIf="liked"><img src="./assets/images/liked-icon.png" alt="like icon"></button>
+            </div>
           </div>
-          <div class="infos-date">
+          <div class="infos-date row ml-2">
             <p>Publié le {{publication?.date_publication | date: 'EEEE d LLLL yyyy'}}</p>
-            <a *ngIf="publication?.modified" class="mb-2" routerLinkActive="active" routerLink="/publications/{{postId}}" (click)="onSeeDate()">Modifié</a>     
+            <a routerLink="/publications/{{postId}}" *ngIf="publication?.modified" class="mb-2 ml-2" (click)="seeDate = !seeDate">Modifié</a>     
           </div>
         </div>
-        <p *ngIf="seeDate" class="mb-2"> Dernière modification  le {{publication?.date_modif | date: 'd LLLL yyyy' | lowercase}} à {{publication?.date_modif | date: 'HH:mm' | lowercase}}</p>
+        <p *ngIf="seeDate" class="mb-2 pl-2"> Dernière modification  le {{publication?.date_modif | date: 'd LLLL yyyy' | lowercase}} à {{publication?.date_modif | date: 'HH:mm':'GMT+2' | lowercase}}</p>
         <div *ngIf=!modifying  class="publication-view">
-            <p>{{content}}</p>
+            <p>{{publication?.content}}</p>
         </div>
-
+        
         <form [formGroup]="modifyForm" *ngIf="!loading && modifying">
             <div class="form-group">
               <label for="title">Titre</label>
@@ -41,45 +46,49 @@
               <p class="text-danger" *ngIf="modifyForm.get('publication').errors?.maxlength">Publication must be at max 4000 characters long</p>
               <p class="text-danger" *ngIf="modifyForm.get('publication').errors?.forbiddenCharacter">Characters cannot be &lt; > or *</p>
             </div>
-            <button mat-raised-button *ngIf="!confirm" class="mr-2" (click)="onMakeModif()" [disabled]="modifyForm.invalid">Envoyer</button>
-            <button mat-raised-button *ngIf="!confirm" class="mr-2" (click)="onCancelModif()">Annuler</button>
-            <button mat-raised-button *ngIf="!confirm" class="mr-2" (click)="onWantDelete()">Effacer</button>
-            <p *ngIf="confirm">Etes-vous sûr(e) de vouloir supprimer cette publication</p>
-            <button mat-raised-button *ngIf="confirm" class="mr-2" (click)="onCancelDelete()">Annuler</button>
-            <button mat-raised-button *ngIf="confirm" (click)="onDelete()">Effacer</button>        
+            <p id="confirm" *ngIf="confirm">Etes-vous sûr(e) de vouloir supprimer cette publication ?</p>
+            <div class="row justify-content-around">
+              <button mat-raised-button *ngIf="!confirm" class="mr-2" (click)="onMakeModif()" [disabled]="modifyForm.invalid">Envoyer</button>
+              <button mat-raised-button *ngIf="!confirm" class="mr-2" (click)="onCancelModif()">Annuler</button>
+              <button mat-raised-button *ngIf="!confirm" class="mr-2" (click)="confirm = !confirm">Effacer</button>
+              
+              <button mat-raised-button *ngIf="confirm" class="mr-2" (click)="confirm = !confirm">Annuler</button>
+              <button mat-raised-button *ngIf="confirm" (click)="onDelete()">Effacer</button>
+            </div>        
         </form>
         <br/>
         <div *ngIf="moderator" class="row">
-          <button *ngIf="!moderated && !isAuthor" mat-raised-button color="warn" class="mod col-3 mb-2 ml-3 mx-auto" (click)="onModerate()"><span>Modérer</span></button>
-          <button *ngIf="moderated && !isAuthor" mat-stroked-button  class="modr col-3 mb-2 ml-3 mx-auto" (click)="onModerate()"><span>Rétablir</span></button> 
+          <button *ngIf="!publication?.moderated && !isAuthor" mat-raised-button color="warn" class="mod col-3 mb-2 ml-3 mx-auto" (click)="onModerate()"><span>Modérer</span></button>
+          <button *ngIf="publication?.moderated && !isAuthor" mat-stroked-button  class="modr col-3 mb-2 ml-3 mx-auto" (click)="onModerate()"><span>Rétablir</span></button> 
         </div>
+        
         <div *ngIf=!modifying  class="post-buttons row no-gutters col-9 col-sm-6 mx-auto">
-        <!--  <div>-->
-        <!--  <button class="btn btn mb-1 mr-2" (click)="onLike()">Like it</button>--> 
-            <button (click)="onWantComment()"><img src="./assets/images/comment-icon.png" alt="comment icon"></button>
-        <!--  <div>-->
-            <button routerLink="/publications"><img src="./assets/images/back-icon.png" alt="back icon"></button>
-            <button *ngIf="!isAuthor" class="" routerLink="/profile/{{publication?.userName}}" (click)="onSeeProfile()"><img src="./assets/images/profile-icon.png" alt="profile icon"></button>
-            <button *ngIf="isAuthor" class="" (click)="onWantModify()"><img src="./assets/images/write-icon.png" alt="edit icon"></button>        
+            <button (click)="commenting = true"><img src="./assets/images/comment-icon.png" alt="comment icon"></button>
+            <button routerLink="/publications" fragment="{{postId}}"><img src="./assets/images/list-icon.png" (click)="onBackToList()" alt="back icon"></button>
+            <button *ngIf="!isAuthor" routerLink="/profile/{{publication?.userName}}" fragment="page-top-profile" (click)="onSeeProfile()"><img src="./assets/images/profile-icon.png" alt="profile icon"></button>
+            <button *ngIf="isAuthor" (click)="onWantModify()"><img src="./assets/images/write-icon.png" alt="edit icon"></button>        
         </div>
     </div>
-
-    <form [formGroup]="commentForm" *ngIf="!loading && commenting">
-        <div class="form-group mt-3">
-          <label for="comment">Commenter</label>
-          <textarea class="form-control" id="comment" formControlName="comment" rows="4"></textarea>
-          <div *ngIf="commentForm.get('comment').errors && (commentForm.get('comment').touched || commentForm.get('comment').dirty)">
-            <p class="text-danger" *ngIf="commentForm.get('comment').errors?.required">A content is required</p>
-            <p class="text-danger" *ngIf="commentForm.get('comment').errors?.maxlength">Comment must be at max 4000 characters long</p>
-            <p class="text-danger" *ngIf="commentForm.get('comment').errors?.forbiddenCharacter">Characters cannot be &lt; > or *</p>
+    
+      <form [formGroup]="commentForm" class="mx-1" *ngIf="!loading && commenting">
+          <div class="form-group mt-3">
+            <label for="comment">Commenter</label>
+            <textarea class="form-control" id="comment" formControlName="comment" rows="4"></textarea>
+            <div *ngIf="commentForm.get('comment').errors && (commentForm.get('comment').touched || commentForm.get('comment').dirty)">
+              <p class="text-danger" *ngIf="commentForm.get('comment').errors?.required">A content is required</p>
+              <p class="text-danger" *ngIf="commentForm.get('comment').errors?.maxlength">Comment must be at max 4000 characters long</p>
+              <p class="text-danger" *ngIf="commentForm.get('comment').errors?.forbiddenCharacter">Characters cannot be &lt; > or *</p>
+            </div>
           </div>
-        </div>
-        <button class="mr-2" mat-raised-button [disabled]="commentForm.invalid" (click)="onComment()">Envoyer</button>
-        <button mat-raised-button (click)="onCancel()">Annuler</button> 
-    </form>
-
-    <app-comment-list [postId]="postId"></app-comment-list>
-
+          <button class="mr-2" mat-raised-button [disabled]="commentForm.invalid" (click)="onComment()">Envoyer</button>
+          <button mat-raised-button (click)="onCancel()">Annuler</button> 
+          
+      </form>
+      <br>
+      <div id="line" *ngIf="!loading && commenting">
+      </div>
+    <app-comment-list [postId]="postId"
+                      [likers]="likers"></app-comment-list>
   </div>
 </div>
 
