--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -3,6 +3,10 @@ body {
     box-sizing: border-box;
 }
 
+footer {
+    height: 40px;
+}
+
 label {
     color: whitesmoke;
 }
@@ -25,6 +29,7 @@ button {
     box-shadow: none;
     border: none;
 }
+
 
 button:disabled {
     border: whitesmoke solid 1px;
@@ -50,3 +55,5 @@ a, a:hover{
 
 .hidden-accessibility {
     display: none;}
+
+
