changement nom et photo accueil

--- a/client/src/app/header/header.component.scss
+++ b/client/src/app/header/header.component.scss
@@ -1,5 +1,71 @@
 @import '../colors.scss';
 
+@font-face {
+    font-family: 'Belligerent-Madness';
+    src:url('../../assets/fonts/Belligerent-Madness.ttf.woff') format('woff'),
+        url('../../assets/fonts/Belligerent-Madness.ttf.svg#Belligerent-Madness') format('svg'),
+        url('../../assets/fonts/Belligerent-Madness.ttf.eot'),
+        url('../../assets/fonts/Belligerent-Madness.ttf.eot?#iefix') format('embedded-opentype'); 
+    font-weight: normal;
+    font-style: normal;
+  }
+
+  @media (max-width: 575.98px) {
+    .cname {
+        height: 100px;
+        p {
+            font-size: 26vw;
+        }        
+    }
+}
+
+@media (min-width: 576px) and (max-width: 767.98px) {
+    .cname {
+        height: 120px;
+        p {
+            font-size: 20vw;
+        }        
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+    .cname {
+        height: 130px;
+        p {
+            font-size: 18vw;
+        }        
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1199.98px) {
+    .cname {
+        height: 130px;
+        p {
+            font-size: 16vw;
+        }        
+    }
+}
+
+@media (min-width: 1200px) {
+    .cname {
+        height: 140px;
+        p {
+            font-size: 190px;
+        }        
+    }
+}
+ 
+
+.cname {
+    margin-bottom: 40px;
+    display: flex;
+    align-items: flex-end;
+    p {
+        font-family: 'Belligerent-Madness';
+    }
+}
+
+
 .bannier {
     background-color: rgb(55, 55, 55);    
     border: solid $btn-main 3px;
@@ -8,7 +74,7 @@
 
 .job-place {    
     h1 {
-        font-size: 3rem;
+        font-size: 2.6rem;
         font-weight: 600;
         font-style: italic;
         color: $post-bg;
@@ -57,3 +123,4 @@ p {
         color: whitesmoke;
     }
 }
+
