correction et amélioration scroll

--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -2,6 +2,7 @@
     <div class="bannier col-xs-12 col-lg-10 mx-auto">
         <div class="job-place row no-gutters">
             <div class="row mx-auto ml-md-2 col-md-10 justify-content-center">
+                <!--<img src="../assets/images/groupo-monochrome-white.png" alt="Logo Groupomania">-->
                 <div class="cname">
                     <p>Fellows</p>
                 </div>
